# portfolio_optimization

./: .gitignore  CMakeLists.txt  README.md  main_mpi.cpp  main_omp.cpp  main_seq.cpp  run.sh
data/: prices.csv  stats.md
include/: data_loader.h  montecarlo.h  portfolio.h  stats.h
src/: data_loader.cpp  montecarlo.cpp  portfolio.cpp  stats.cpp
